[metadata]
name = sentinel1decoder
version = 0.1
author = Rich Hall
author_email = richardhall434@gmail.com
description = A python decoder for ESA Sentinel-1 Level0 files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rich-Hall/sentinel1decoder
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov

[flake8]
max-line-length = 120
extend-ignore = E203

[black]
line-length = 120

[isort]
profile = black
multi_line_output = 3
