[package]
name = "sentinel1decoder"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel1decoder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.5", features = ["extension-module"] }

[package.metadata.maturin]
# Optional: set the Python package name if different from the Rust crate name
# name = "sentinel1decoder"
