[package]
name = "sentinel1decoder"
version = "1.1.0"
edition = "2021"

[lib]
name = "_sentinel1decoder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
num-complex = "0.4"
rayon = "1.10"

[package.metadata.maturin]
# Optional: set the Python package name if different from the Rust crate name
# name = "sentinel1decoder"
